--- a/src/Compilers/CSharp/Portable/CSharpCodeAnalysis.csproj
+++ b/src/Compilers/CSharp/Portable/CSharpCodeAnalysis.csproj
@@ -396,6 +396,7 @@
     <Compile Include="Lowering\LocalRewriter\LocalRewriter_Block.cs" />
     <Compile Include="Lowering\LocalRewriter\LocalRewriter_BreakStatement.cs" />
     <Compile Include="Lowering\LocalRewriter\LocalRewriter_Call.cs" />
+    <Compile Include="Lowering\LocalRewriter\LocalRewriter_NullCoalescingAssignmentOperator.cs" />
     <Compile Include="Lowering\LocalRewriter\LocalRewriter_CompoundAssignmentOperator.cs" />
     <Compile Include="Lowering\LocalRewriter\LocalRewriter_ConditionalAccess.cs" />
     <Compile Include="Lowering\LocalRewriter\LocalRewriter_ConditionalOperator.cs" />
